--- a/TEST-SECOND-SABANA-RESEARCH-1.6.0/build.gradle
+++ b/TEST-SECOND-SABANA-RESEARCH-1.6.0/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
     id 'jacoco'
-    id 'org.sonarqube' version '3.1.1'
+    id "org.sonarqube" version "3.0"
 }
 
 group 'sabana.poob'
@@ -29,6 +29,14 @@ test {
 
 sonarqube {
     properties {
-        property 'sonar.host.url', ''
+        property 'sonar.sourceEncoding', 'UTF-8'
     }
 }
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
+    }
+}
+
+test.finalizedBy jacocoTestReport
