--- a/TEST-SECOND-SABANA-RESEARCH-1.6.0/gradle/wrapper/gradle-wrapper.properties
+++ b/TEST-SECOND-SABANA-RESEARCH-1.6.0/gradle/wrapper/gradle-wrapper.properties
@@ -3,3 +3,9 @@ distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-6.3-bin.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
+systemProp.sonar.host.url=http://localhost:9000
+./gradlew sonarqube 
+  -Dsonar.projectKey=sabana-test-parcial 
+  -Dsonar.host.url=http://localhost:9000 
+  -Dsonar.login=616ad898fd0576b7f3712585f648d044db98b1a7
+
