--- a/TEST-SECOND-SABANA-RESEARCH-1.6.0/gradle/wrapper/gradle-wrapper.properties
+++ b/TEST-SECOND-SABANA-RESEARCH-1.6.0/gradle/wrapper/gradle-wrapper.properties
@@ -4,7 +4,7 @@ distributionUrl=https\://services.gradle.org/distributions/gradle-6.3-bin.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
 systemProp.sonar.host.url=http://localhost:9000
-./gradlew sonarqube 
+./gradlew=sonarqube 
   -Dsonar.projectKey=sabana-test-parcial 
   -Dsonar.host.url=http://localhost:9000 
   -Dsonar.login=616ad898fd0576b7f3712585f648d044db98b1a7
